--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,6 @@
 PORT = 8800
-HOST = 'localhost'
-USER = 'lydia'
-PASSWORD = 'lydia12345'
-DATABASE = 'prms'
+HOST = "localhost"
+DB_USER = "root"
+DB_PORT = 3306
+PASSWORD = "Lydia@12345"
+DATABASE = "prms"
