added some functionalities in both client and api side

--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,15 @@
 PORT = 8800
+
 HOST = "localhost"
 DB_USER = "root"
 DB_PORT = 3306
 PASSWORD = "Lydia@12345"
 DATABASE = "prms"
+
+#JWT
+JWT_TOKEN = "dsjf345-8792-asdf-3456-7890-asdf-@$#^-gdyb"
+
+# Email
+EMAIL = "costantineyohana1999@gmail.com"
+EMAIL_PASS = "amnypvftlicfwzyw"
+EMAIL_PASS1 = "jjbiflvtjocttebf"
