--- a/api/package.json
+++ b/api/package.json
@@ -18,8 +18,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "messagebird": "^4.0.1",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.3",
+    "twilio": "^4.11.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
