some changes for .env

--- a/api/.env
+++ b/api/.env
@@ -1,10 +1,10 @@
 PORT = 8800
 
 # DB_CREDENTIALS
-HOST = "localhost"
-DB_USER = "root"
+HOST = "prms.cwsmxeotnahx.us-east-1.rds.amazonaws.com"
+DB_USER = "prms"
 DB_PORT = 3306
-PASSWORD = "Lydia@12345"
+PASSWORD = "Cymstarlink#2000"
 DATABASE = "prms"
 
 # JWT
